// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionContainer order 1`] = `
<DocumentFragment>
  <div>
    <div
      class="css-15owl46"
    >
      <div
        class="css-x60p33"
      >
        <div
          class="css-1vga9oy"
        >
          <a
            class="css-1t54e2w"
            href="https://google.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            google
          </a>
        </div>
        <div
          class="css-7d11p2"
        >
          <button
            class="css-1tf4h46"
          >
            action 1
          </button>
        </div>
      </div>
    </div>
    <div
      class="css-eqxzio"
    >
      <svg
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="0.5"
        class="css-14d2907"
        fill="none"
        height="128"
        role="img"
        stroke="currentcolor"
        stroke-width="2"
        viewBox="0 0 32 32"
        width="128"
      >
        <circle
          cx="16"
          cy="16"
          opacity="0.125"
          r="14"
        />
        <circle
          cx="16"
          cy="16"
          r="14"
          stroke-dasharray="87.96459430051421"
          stroke-dashoffset="43.982297150257104"
          transform="rotate(-90 16 16)"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActionContainer override 1`] = `
<DocumentFragment>
  <div>
    <div
      class="css-15owl46"
    >
      <div
        class="css-x60p33"
      >
        <div
          class="css-1vga9oy"
        >
          <button
            class="css-1tf4h46"
          >
            Copy
          </button>
        </div>
        <div
          class="css-7d11p2"
        >
          <a
            class="css-1t54e2w"
            href="https://google.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            google
          </a>
        </div>
      </div>
    </div>
    <div
      class="css-eqxzio"
    >
      <svg
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="0.5"
        class="css-14d2907"
        fill="none"
        height="128"
        role="img"
        stroke="currentcolor"
        stroke-width="2"
        viewBox="0 0 32 32"
        width="128"
      >
        <circle
          cx="16"
          cy="16"
          opacity="0.125"
          r="14"
        />
        <circle
          cx="16"
          cy="16"
          r="14"
          stroke-dasharray="87.96459430051421"
          stroke-dashoffset="43.982297150257104"
          transform="rotate(-90 16 16)"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActionContainer overview 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
    style="width: 100%;"
  >
    <div>
      <div
        class="css-15owl46"
      >
        <div
          class="css-x60p33"
        >
          <div
            class="css-1vga9oy"
          >
            <button
              class="css-1tf4h46"
            >
              action 1
            </button>
          </div>
          <div
            class="css-7d11p2"
          >
            <a
              class="css-1t54e2w"
              href="https://google.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              google
            </a>
          </div>
        </div>
      </div>
      <div
        class="css-eqxzio"
      >
        <svg
          aria-valuemax="1"
          aria-valuemin="0"
          aria-valuenow="0.5"
          class="css-14d2907"
          fill="none"
          height="128"
          role="img"
          stroke="currentcolor"
          stroke-width="2"
          viewBox="0 0 32 32"
          width="128"
        >
          <circle
            cx="16"
            cy="16"
            opacity="0.125"
            r="14"
          />
          <circle
            cx="16"
            cy="16"
            r="14"
            stroke-dasharray="87.96459430051421"
            stroke-dashoffset="43.982297150257104"
            transform="rotate(-90 16 16)"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
